fix prestige button on mobile

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -9,3 +9,6 @@ $gold-color: #f1c40f;
 $disabled-color: #bdc3c7;
 $font-main: "Fjalla One", sans-serif;
 $font-display: "Fjalla One", sans-serif;
+
+// responsible variables
+$left-column-height: 55vh;
