--- a/scss/layout/_columns.scss
+++ b/scss/layout/_columns.scss
@@ -39,6 +39,7 @@
       text-align: center;
       font-size: 2rem;
       font-family: $font-display;
+      background-color: $panel-bg;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
   }
